--- a/book/package.json
+++ b/book/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "element-ui": "^2.15.8",
     "core-js": "^3.8.3",
+    "vue-router": "^3.5.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
